<resources>
    <string name="app_name">Knowledge sharing</string>

    <string name="google_client_id">10791456292-eoudjmvdopfvga7sssgflovveieurqga.apps.googleusercontent.com</string>
    <string name="database_url">https://knowledge-sharing-app-5da27-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="login"><u>Sign in</u></string>
    <string name="sign_in">Sign in</string>
    <string name="company_registration">Company sign up</string>
    <string name="employee_registration">Employee sign up</string>
    <string name="login_via_email">Sign in via company email</string>
    <string name="feed">Feed</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="update_profile">Edit profile</string>
    <string name="saved_posts">Saved posts</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_email">Enter your work email</string>
    <string name="hint_password">Create your password</string>
    <string name="hint_job_title">Enter job title</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_empty_field">Field cannot be empty</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_invalid_name">Invalid name</string>
    <string name="hint_password_enter">Enter your password</string>
    <string name="hint_email_company">Enter company email</string>
    <string name="hint_name_company">Enter company name</string>
    <string name="create_post">Create post</string>
    <string name="enter_title">Enter title of the post</string>
    <string name="enter_post">Write your post</string>
    <string name="create">Create</string>
    <string name="post">Post</string>
    <string name="hint_old_password">Enter old password</string>
    <string name="change_password">Change password</string>
    <string name="change_avatar">Change your avatar</string>
    <string name="change_job_title">Change job title</string>
    <string name="change_user_data">Change user data</string>
    <string name="save">Save</string>
    <string name="error_firebase_database">Invalid user uid, cannot upload to Firebase Database</string>
    <string name="error_not_equal_passwords">Passwords not equal</string>
    <string name="error_empty_post">Complete post to create</string>
    <string name="hint_company">Enter company name</string>
    <string name="create_chat">Create chat</string>
    <string name="your_comment">Your comment</string>
    <string name="write_message">Write your message</string>
    <string name="enter_link">Paste link here</string>
    <string name="users">Users</string>
    <string name="create_user">Create user</string>
    <string name="hint_old_password_enter">Enter your old password</string>
    <string name="hint_new_password_enter">Enter your new password</string>
    <string name="submit">Submit</string>
    <string name="owner">Owner</string>
    <string name="send">Send</string>
    <string name="email">Email:</string>
    <string name="job_title">Job title:</string>
</resources>