<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        android:clipToPadding="false">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".activity.UpdateProfileActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/main_blue"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/update_profile"
                app:titleTextColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/change_image_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/change_avatar"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/user_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_image_title" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/change_job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/change_user_data"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_input"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:textColor="@color/main_dark_blue"
                android:textColorHint="@color/main_dark_blue"
                app:layout_constraintTop_toBottomOf="@+id/change_job_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/error_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/opensanss_semibold"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                tools:text="@string/error_empty_field" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_job_title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_input"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/hint_job_title"
                android:padding="10dp"
                android:textColor="@color/main_dark_blue"
                android:textColorHint="@color/main_dark_blue"
                app:layout_constraintTop_toBottomOf="@+id/error_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/error_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/opensanss_semibold"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_job_title"
                tools:text="@string/error_empty_field" />


        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_blue"
        android:fontFamily="@font/opensanss_semibold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeTextType="uniform" />

</FrameLayout>
