<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_blue"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/create_user"
        app:titleTextColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_input"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/hint_name"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/opensanss_semibold"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        tools:text="@string/error_empty_field" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_mail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_input"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/error_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/opensanss_semibold"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mail"
        tools:text="@string/error_empty_field" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_input"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/hint_password_enter"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/error_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/opensanss_semibold"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:text="@string/error_empty_field" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_job_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_input"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/hint_job_title"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/error_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/opensanss_semibold"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_job_title"
        tools:text="@string/error_empty_field" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_user_registration"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_blue"
        android:fontFamily="@font/opensanss_semibold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/create_user"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>